--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 dist: xenial
 install:
 - python setup.py install
-- pip inatll -r docs/requirements.txt
+- pip install -r docs/requirements.txt
 script:
 - python setup.py test -addopts -v
 - cd docs && make doctest
