--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
 - python setup.py install
 - pip install -r docs/requirements.txt
 script:
-- python setup.py test -addopts -v
+- python setup.py test --addopts -v
 - cd docs && make doctest
