--- a/original_tests/test_module/fixtures/test_config.cfg
+++ b/original_tests/test_module/fixtures/test_config.cfg
@@ -14,9 +14,9 @@ pip_install_testpypi = pip install --extra-index-url https://test.pypi.org/pypi
 pytest = pytest
 
 [tests]
-repo = https://github.com/cvut/ghia
-branch = modular
-tests = tests/test_errors.py tests/test_help.py tests/test_web_smoke.py
+repo = https://github.com/kotlaluk/mi-pyt-ghia
+branch = master
+tests = original_tests/test_behavior/test_errors.py original_tests/test_behavior/test_help.py original_tests/test_behavior/test_web_smoke.py
 entrypoint = ghia
 requirements = requests Flask click
 test_requirements = pytest
@@ -44,4 +44,4 @@ readme = README README.md README.rst
 # LICENSE filename options (one of those should be in dist)
 license = LICENSE COPYING COPYRIGHT
 # Envvars affecting tests (i.e. to be unset before testing)
-envvars = 
+envvars =
